--- a/Server/src/main/resources/templates/check-in.html
+++ b/Server/src/main/resources/templates/check-in.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet">
+<link rel="stylesheet" href="icon-bar.css">
+<link rel="stylesheet" href="check-in.css">
+<script src="https://kit.fontawesome.com/9a7aeebf11.js" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
 <head title="check-in"></head>
-    <div class="container">
-        <button id="checkInButton">Check In!</button>
-    </div>
+<body>
+<div class="icon-bar">
+    <a href="home.html"> <i class="fas fa-home"></i></a>
+    <a href="search-location.html"><i class="fas fa-search-location"></i></a>
+    <a class = "active"><i class="fas fa-map-marker-alt"></i></a>
+    <a href="home.html"> <i class="fas fa-user"></i></a>
+    <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
+</div>
+<br><br>
+<div class="msg1">Are you there right now?</div>
+<iframe
+        width=100%
+        height=330
+        style="border:0"
+        loading="lazy"
+        allowfullscreen
+        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBgQppaGx-QFHdBvhmV4YD1wPEs_EygwJc
+    &q=3QJ9%2BX2">
+</iframe>
+    <br>
+<div class="options">
+    <br>
+    <button id="send-location">Yes, Check In!</button>
+    <br>
+    Or you can choose location manually via <i class="fas fa-search-location"></i>
+</div>
 <p id="demo"></p>
+</body>
 <script src="/src/main/resources/static/check-in.js"></script>
 </html>
