--- a/Server/src/main/resources/templates/register.html
+++ b/Server/src/main/resources/templates/register.html
@@ -2,7 +2,7 @@
 <html>
 <head> <meta name="viewport" content="width=device-width, initial-scale=1" user-scalable=no>
    </head>
-<link rel="stylesheet" type="text/css" href="register.css">
+<link rel="stylesheet" type="text/css" href="/css/register.css">
 <form method= "POST" action="/register">
     <div class="container">
         <div class="logo">
