--- a/Server/src/main/resources/templates/home.html
+++ b/Server/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Welcome To SneakPic!</title>
 </head>
-<body><link rel="stylesheet" href="icon-bar.css">
+<body><link rel="stylesheet" href="../static/css/icon-bar.css">
 
 <div class="icon-bar">
     <a class="active"> <i class="fas fa-house-user"></i></a>
