--- a/Server/src/main/resources/templates/search-location.html
+++ b/Server/src/main/resources/templates/search-location.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <link rel="stylesheet"  type="text/css" href="/css/icon-bar.css">
 <link rel="stylesheet"   type="text/css" href="/css/check-in.css">
 <script src="https://kit.fontawesome.com/9a7aeebf11.js" crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-<head title="check-in"></head>
+
+<head>
+    <meta charset="UTF-8">
+    <title>search location</title>
+</head>
 <body>
 <div class="icon-bar">
     <a href="home.html"> <i class="fas fa-home"></i></a>
-    <a href="search-location.html"><i class="fas fa-search-location"></i></a>
-    <a class = "active"><i class="fas fa-map-marker-alt"></i></a>
+    <a class = active><i class="fas fa-search-location"></i></a>
+    <a  href = "check-in.html"><i class="fas fa-map-marker-alt"></i></a>
     <a href="home.html"> <i class="fas fa-user"></i></a>
     <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
 </div>
-<br><br>
-<div class="msg1">Are you there right now?</div>
+<div class="msg1">Please choose location on map, and then set time range</div>
 <div id="map"></div>
 <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgQppaGx-QFHdBvhmV4YD1wPEs_EygwJc&callback=initMap&libraries=&v=weekly"
         async defer
 ></script>
 <div class="options">
-<br>
-<button id="send-location">Yes, Check In!</button>
-<br>
-Or you can choose location manually via <i class="fas fa-search-location"></i>
+    <div class="timeRange">
+        <input type="datetime-local" id="from"
+               name="meeting-time"  onchange="fromTimeHandler(event)">
+        <input type="datetime-local" id="to"
+               name="meeting-time" onchange="toTimeHandler(event)" >
+
+    </div>
+    <br>
+    <button id="send-location">Send Location</button>
 </div>
-<p id="demo"></p>
+
 </body>
-<script src="/js/check-in.js"></script>
+<script src="/js/search-location.js"></script>
 </html>
