--- a/Server/src/main/resources/templates/view-album.html
+++ b/Server/src/main/resources/templates/view-album.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
-<link rel="stylesheet" href="icon-bar.css">
+<link rel="stylesheet" href="../static/css/icon-bar.css">
 <link rel="stylesheet" href="photorapher-bar.css">
 <script src="https://kit.fontawesome.com/9a7aeebf11.js" crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
