--- a/Server/src/main/resources/templates/check-in.html
+++ b/Server/src/main/resources/templates/check-in.html
@@ -9,7 +9,7 @@
 <body>
 <div class="icon-bar">
     <a href="home.html"> <i class="fas fa-home"></i></a>
-    <a href="search-location.html"><i class="fas fa-search-location"></i></a>
+    <a href="search-location"><i class="fas fa-search-location"></i></a>
     <a class = "active"><i class="fas fa-map-marker-alt"></i></a>
     <a href="home.html"> <i class="fas fa-user"></i></a>
     <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
