--- a/Server/src/main/resources/templates/loadAlbumForm.html
+++ b/Server/src/main/resources/templates/loadAlbumForm.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet"  type="text/css" href="/css/icon-bar.css">
+<link rel="stylesheet"   type="text/css" href="/css/check-in.css">
+<script src="https://kit.fontawesome.com/9a7aeebf11.js" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add Album</title>
 </head>
 <body>
+<div class="icon-bar">
+    <a href="home.html"> <i class="fas fa-home"></i></a>
+    <a href="search-location"><i class="fas fa-search-location"></i></a>
+    <a class = "active"><i class="fas fa-map-marker-alt"></i></a>
+    <a href="home.html"> <i class="fas fa-user"></i></a>
+    <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
+</div>
+<div class="loadAlbum">
+<form method= "POST" action="/user/load-album" id="postAlbumForm" onsubmit="addPositionToAlbum(event)">
+    <div class = "msg1">
+    <h2>Album details:</h2>
+    <label>Album Title: </label><input type="text" id="name" name="name" required><br>
+        <label>Album's Location:</label>
+        <br>
+        <label style="color: dimgrey; font-size: 18px;font-weight: lighter;">please mark a location on map (double-click)</label>
+        <div id="map"></div>
+    <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgQppaGx-QFHdBvhmV4YD1wPEs_EygwJc&callback=initMap&libraries=&v=weekly"
+            async defer
+    ></script>
+        <div class="timeRange">
+            <label>From:</label>
+            <input type="datetime-local" id="from" onchange="fromTimeHandler(event)">
+            <br>
+            <label>To:</label>
+            <input type="datetime-local" id="to" onchange="toTimeHandler(event)" >
 
-<form method= "POST" action="/user/load-album">
-    <input type="text" id="name" name="name">
-    <input type="submit" value="Submit">
-
+        </div></div>
+    <div class="options">
+        <input class="button" type="submit" value="Submit"></div>
 </form>
-
+</div>
 </body>
+<script src="/js/search-location.js"></script>
 </html>
