--- a/Server/src/main/resources/templates/check-in.html
+++ b/Server/src/main/resources/templates/check-in.html
@@ -12,7 +12,7 @@
     <a href="search-location"><i class="fas fa-search-location"></i></a>
     <a class = "active"><i class="fas fa-map-marker-alt"></i></a>
     <a href="home.html"> <i class="fas fa-user"></i></a>
-    <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
+    <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
 </div>
 <br><br>
 <div class="msg1">Are you there right now?</div>
@@ -25,7 +25,7 @@
 <br>
 <button id="send-location">Yes, Check In!</button>
 <br>
-Or you can choose location manually via <i class="fas fa-search-location"></i>
+Or choose location manually via <i class="fas fa-search-location"></i>
 </div>
 <p id="demo"></p>
 </body>
