--- a/Server/src/main/resources/templates/search-location.html
+++ b/Server/src/main/resources/templates/search-location.html
@@ -14,9 +14,9 @@
 <div class="icon-bar">
     <a href="home.html"> <i class="fas fa-home"></i></a>
     <a class = active><i class="fas fa-search-location"></i></a>
-    <a  href = "check-in.html"><i class="fas fa-map-marker-alt"></i></a>
+    <a  href = "/user/check-in"><i class="fas fa-map-marker-alt"></i></a>
     <a href="home.html"> <i class="fas fa-user"></i></a>
-    <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
+    <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
 </div>
 <div class="msg1" style="font-size: 20px">Please choose location on map, and then set time range</div>
 <div id="map"></div>
@@ -34,7 +34,7 @@
 
     </div>
     <br>
-    <button id="send-location">Send Location</button>
+    <button id="send-location" onclick="sendPosition()">Send Location</button>
 </div>
 
 </body>
