--- a/Server/src/main/resources/templates/home.html
+++ b/Server/src/main/resources/templates/home.html
@@ -3,16 +3,27 @@
 <head>
     <script src="https://kit.fontawesome.com/9a7aeebf11.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/icon-bar.css">
+    <link rel="stylesheet" href="/css/sub-bar.css">
     <meta charset="UTF-8">
     <title>Welcome To SneakPic!</title>
 </head>
-<body><link rel="stylesheet" href="../static/css/icon-bar.css">
-
+<body>
 <div class="icon-bar">
-    <a class="active"> <i class="fas fa-house-user"></i></a>
-    <a href="search-location.html"><i class="fas fa-search-location"></i></a>
-    <a href="check-in.html"><i class="fas fa-map-marker-alt"></i></a>
-    <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
-</div></body>
+    <a class = "active"> <i class="fas fa-home"></i></a>
+    <a href="/user/search-location"><i class="fas fa-search-location"></i></a>
+    <a href="/user/check-in"><i class="fas fa-map-marker-alt"></i></a>
+    <a href="home.html"> <i class="fas fa-user"></i></a>
+    <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge"></span></a>
+</div>
+<div class = "sub-bar">
+    <a href="load-album"><i class="fas fa-upload"></i></a>
+    <a href="find-photographer"><i class="fas fa-search"></i></a>
+</div>
+<div class = "welcome">
+Welcome to SneakPic!
+</div>
+</body>
+
 
 </html>
