--- a/Server/src/main/resources/templates/loadImageForm.html
+++ b/Server/src/main/resources/templates/loadImageForm.html
@@ -2,43 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <link rel="stylesheet"  type="text/css" href="/css/icon-bar.css">
+    <link rel="stylesheet"   type="text/css" href="/css/choose-images.css">
+    <link rel="stylesheet" href="/css/sub-bar.css">
+    <script src="https://kit.fontawesome.com/9a7aeebf11.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Photoes Upload</title>
 </head>
-
-<form id="idForm" method="post" action="/user/load-image"
-      enctype="multipart/form-data"
->
-    ...
-    <div>
-
-        <label>Photos: </label>
-        <input type="file" name="image" accept="image/png, image/jpeg" />
-            <input type="submit" value="Submit">
-
-
-    </div>
-    ...
-</form>
-
-<form id="DoneForm" method="get" action="/user/load-album"
-
->
-    ...
-    <div>
-
-        <label>Done --> </label>
-        <button type="button" name="finish"  />
-        <input type="submit" value="Done">
-
-
-    </div>
-    ...
-</form>
 <body>
-<!--<script>-->
-<!--    function getURL() {-->
-<!--        alert("The URL of this page is: " + window.location.href);-->
-<!--    }-->
-<!--</script>-->
+<div class="icon-bar">
+    <a class = "active"> <i class="fas fa-home"></i></a>
+    <a href="search-location"><i class="fas fa-search-location"></i></a>
+    <a href="check-in"><i class="fas fa-map-marker-alt"></i></a>
+    <a href="home.html"> <i class="fas fa-user"></i></a>
+    <a href="notifications" class="notification"><i class="fas fa-bell"></i><span class="badge"></span></a>
+</div>
+<div class = "sub-bar">
+    <a class="active"><i class="fas fa-upload"></i></a>
+    <a href="find-photographer"><i class="fas fa-search"></i></a>
+</div>
+<div class="allforms">
+<form id="idForm" method="post" action="/user/load-image"
+      enctype="multipart/form-data"><br>
+    <div>
+        <h2>First, upload photos, one by one</h2>
+        <input class = "uploadFile" type="file" id = "files" name="image" accept="image/png, image/jpeg"/>
+        <input type="submit" value="Upload">
+    </div>
+</form>
+<form id="DoneForm" method="get" action="/user/load-album">
+    <div>
+        <br><br><h2>Done uploading all photos? </h2><br>
+        <!--!<button type="button" name="finish"  />-->
+        <input type="submit" value="Done">
+    </div>
+</form>
+</div>
 </body>
 </html>
