--- a/Server/src/main/resources/templates/login.html
+++ b/Server/src/main/resources/templates/login.html
@@ -16,6 +16,7 @@
         <input type="text" placeholder="Username" name="username" id="username" required><br/>
         <input type="password" placeholder="Password" name="password" id="password" required><br/>
         <button type="submit" class="loginBtn">Log In</button>
+        <div class="register">New User? <a href="register">Sign Up!</a> </div>
     </div>
 </form>
 </body>
