--- a/Server/src/main/resources/templates/register.html
+++ b/Server/src/main/resources/templates/register.html
@@ -3,12 +3,12 @@
 <head> <meta name="viewport" content="width=device-width, initial-scale=1" user-scalable=no>
    </head>
 <link rel="stylesheet" type="text/css" href="/css/register.css">
+<div class="logo">
+    <h2 >Register</h2>
+    <p>Please fill in this form to create an account.</p>
+</div>
 <form method= "POST" action="/register">
     <div class="container">
-        <div class="logo">
-        <h3 >Register</h3>
-        <p>Please fill in this form to create an account.</p>
-        </div>
         <label for="firstName"><b>First Name</b></label>
         <input type="text" placeholder="Enter First Name" name="firstName" id="firstName" required><br/>
 
@@ -25,7 +25,7 @@
         <input type="password" placeholder="Repeat Password" name="matchingPassword" id="psw-repeat" required><br/>
         <hr>
 
-        <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+        <!--<p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>-->
         <button type="submit" class="registerbtn">Register</button>
     </div>
 </form>
