--- a/Server/src/main/resources/templates/search-location.html
+++ b/Server/src/main/resources/templates/search-location.html
@@ -12,13 +12,13 @@
 </head>
 <body>
 <div class="icon-bar">
-    <a href="home.html"> <i class="fas fa-home"></i></a>
+    <a href="home"> <i class="fas fa-home"></i></a>
     <a class = active><i class="fas fa-search-location"></i></a>
-    <a  href = "/user/check-in"><i class="fas fa-map-marker-alt"></i></a>
+    <a  href = "check-in"><i class="fas fa-map-marker-alt"></i></a>
     <a href="home.html"> <i class="fas fa-user"></i></a>
-    <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
+    <a href="notifications" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
 </div>
-<div class="msg1" style="font-size: 20px">Please choose location on map, and then set time range</div>
+<div class="msg1"><h2>Please choose location on map, and then set time range</h2></div>
 <div id="map"></div>
 <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgQppaGx-QFHdBvhmV4YD1wPEs_EygwJc&callback=initMap&libraries=&v=weekly"
