--- a/Server/src/main/resources/templates/loadImageForm.html
+++ b/Server/src/main/resources/templates/loadImageForm.html
@@ -20,9 +20,7 @@
     ...
 </form>
 
-<form id="DoneForm" method="get" action="/user/load-album"
-
->
+<form id="DoneForm" method="get" action="/user/load-album">
     ...
     <div>
 
