--- a/Server/src/main/resources/templates/home.html
+++ b/Server/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
     <a href="/user/search-location"><i class="fas fa-search-location"></i></a>
     <a href="/user/check-in"><i class="fas fa-map-marker-alt"></i></a>
     <a href="home.html"> <i class="fas fa-user"></i></a>
-    <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge"></span></a>
+    <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
 </div>
 <div class = "sub-bar">
     <a href="load-album"><i class="fas fa-upload"></i></a>
@@ -25,5 +25,6 @@ Welcome to SneakPic!
 </div>
 </body>
 
+<script src="/js/notifications.js"></script>
 
 </html>
