--- a/Server/src/main/resources/templates/loadImageForm.html
+++ b/Server/src/main/resources/templates/loadImageForm.html
@@ -15,7 +15,7 @@
     <a href="search-location"><i class="fas fa-search-location"></i></a>
     <a href="check-in"><i class="fas fa-map-marker-alt"></i></a>
     <a href="home.html"> <i class="fas fa-user"></i></a>
-    <a href="notifications" class="notification"><i class="fas fa-bell"></i><span class="badge"></span></a>
+    <a href="notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
 </div>
 <div class = "sub-bar">
     <a class="active"><i class="fas fa-upload"></i></a>
@@ -39,4 +39,5 @@
 </form>
 </div>
 </body>
+<script src="/js/notifications.js"></script>
 </html>
