--- a/Server/src/main/resources/templates/search-location.html
+++ b/Server/src/main/resources/templates/search-location.html
@@ -16,7 +16,7 @@
     <a class = active><i class="fas fa-search-location"></i></a>
     <a  href = "check-in"><i class="fas fa-map-marker-alt"></i></a>
     <a href="home.html"> <i class="fas fa-user"></i></a>
-    <a href="notifications" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
+    <a href="notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id = "badge"></span></a>
 </div>
 <div class="msg1"><h2>Please choose location on map, and then set time range</h2></div>
 <div id="map"></div>
@@ -39,4 +39,6 @@
 
 </body>
 <script src="/js/search-location.js"></script>
+<script src="/js/notifications.js"></script>
+
 </html>
