--- a/Server/src/main/resources/templates/view-album.html
+++ b/Server/src/main/resources/templates/view-album.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <link rel="stylesheet" href="../static/css/icon-bar.css">
-<link rel="stylesheet" href="photorapher-bar.css">
+<link rel="stylesheet" href="../static/css/photorapher-bar.css">
 <script src="https://kit.fontawesome.com/9a7aeebf11.js" crossorigin="anonymous"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
@@ -16,7 +16,7 @@
         <a href="search-location.html"><i class="fas fa-search-location"></i></a>
         <a><i class="fas fa-map-marker-alt"></i></a>
         <a href="home.html"> <i class="fas fa-user"></i></a>
-        <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge">3</span></a>
+        <a href="notifications.html" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
     </div>
 
 <body>
@@ -42,4 +42,6 @@
     </p>
 </div>
 </body>
+<script src="/js/notifications.js"></script>
+
 </html>
