--- a/Server/src/main/resources/templates/view-image.html
+++ b/Server/src/main/resources/templates/view-image.html
@@ -13,7 +13,7 @@
 <body onload="injectLinks()">
 <div class="icon-bar">
     <a href="/user/home"> <i class="fas fa-home"></i></a>
-    <a class = active><i class="fas fa-search-location"></i></a>
+    <a href = "/user/search-location"><i class="fas fa-search-location"></i></a>
     <a  href = "/user/check-in"><i class="fas fa-map-marker-alt"></i></a>
     <a href="/user/profile"> <i class="fas fa-user"></i></a>
     <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
