--- a/Server/src/main/resources/templates/home.html
+++ b/Server/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/icon-bar.css">
     <link rel="stylesheet" href="/css/sub-bar.css">
+    <link rel="stylesheet" href="/css/home.css">
     <meta charset="UTF-8">
     <title>Welcome To SneakPic!</title>
 </head>
@@ -13,18 +14,25 @@
     <a class = "active"> <i class="fas fa-home"></i></a>
     <a href="/user/search-location"><i class="fas fa-search-location"></i></a>
     <a href="/user/check-in"><i class="fas fa-map-marker-alt"></i></a>
-    <a href="home.html"> <i class="fas fa-user"></i></a>
+    <a href="/user/myProfile"> <i class="fas fa-user"></i></a>
     <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
 </div>
 <div class = "sub-bar">
     <a href="load-album"><i class="fas fa-upload"></i></a>
     <a href="find-photographer"><i class="fas fa-search"></i></a>
 </div>
-<div class = "welcome">
-Welcome to SneakPic!
+
+<div class = "Gallery" id="gallery">
+        <img class="mySlides" src="/img/welcomw.jpg" style="width:100%">
+        <img class="mySlides" src="/img/Goingout.jpg" style="width:100%">
+        <img class="mySlides" src="/img/Forgot.jpg" style="width:100%">
+    <img class="mySlides" src="/img/rate.jpg" style="width:100%">
+
+</div>
 </div>
 </body>
 
 <script src="/js/notifications.js"></script>
+<script src="/js/home.js"></script>
 
 </html>
