--- a/Server/src/main/resources/static/css/icon-bar.css
+++ b/Server/src/main/resources/static/css/icon-bar.css
@@ -35,6 +35,6 @@
     background: red;
     color:  white;
     font-size: 28px; /* Increased font size */
-    font-family:monospace, "monaco"
+    font-family:monospace, "monaco";
 
 }
