--- a/Server/src/main/resources/templates/find-photographer.html
+++ b/Server/src/main/resources/templates/find-photographer.html
@@ -5,34 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/icon-bar.css">
     <link rel="stylesheet" href="/css/sub-bar.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/search.css">
     <meta charset="UTF-8">
-    <title>Welcome To SneakPic!</title>
+    <title>search</title>
 </head>
 <body>
 <div class="icon-bar">
-    <a class = "active"> <i class="fas fa-home"></i></a>
+    <a class = "active" href="/user/home"> <i class="fas fa-home"></i></a>
     <a href="/user/search-location"><i class="fas fa-search-location"></i></a>
     <a href="/user/check-in"><i class="fas fa-map-marker-alt"></i></a>
     <a href="/user/myProfile"> <i class="fas fa-user"></i></a>
     <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
 </div>
+
 <div class = "sub-bar">
-    <a href="load-album"><i class="fas fa-upload"></i></a>
-    <a href="/user/search-photographer"><i class="fas fa-search"></i></a>
+    <a href="user/load-album"><i class="fas fa-upload"></i></a>
+    <a class = "active" href="/user/find-photographer"><i class="fas fa-search"></i></a>
 </div>
 
-<div class = "Gallery" id="gallery">
-        <img class="mySlides" src="/img/welcomw.jpg" style="width:100%">
-        <img class="mySlides" src="/img/Goingout.jpg" style="width:100%">
-        <img class="mySlides" src="/img/Forgot.jpg" style="width:100%">
-    <img class="mySlides" src="/img/rate.jpg" style="width:100%">
-
-</div>
+<div class="search-line" id="search-line"><input type="text" id="searchQuery"><a id = "search-btn"><i class="fas fa-search"></i></a></div>
+<div class="errorMsg" id="errorMsg"></div>
+<div class="results" id = "results">
 </div>
 </body>
-
-<script src="/js/notifications.js"></script>
-<script src="/js/home.js"></script>
-
+<script src = "/js/photographer-results.js"></script>
+<script src = "/js/createStars.js"></script>
 </html>
