--- a/Server/src/main/resources/templates/find-photographer.html
+++ b/Server/src/main/resources/templates/find-photographer.html
@@ -28,6 +28,7 @@
 <div class="results" id = "results">
 </div>
 </body>
+<script src="/js/notifications.js"></script>
 <script src = "/js/photographer-results.js"></script>
 <script src = "/js/createStars.js"></script>
 </html>
