--- a/Server/src/main/resources/templates/my-profile.html
+++ b/Server/src/main/resources/templates/my-profile.html
@@ -11,7 +11,7 @@
     <a href="/user/home"> <i class="fas fa-home"></i></a>
     <a href="/user/search-location"><i class="fas fa-search-location"></i></a>
     <a href="/user/check-in"><i class="fas fa-map-marker-alt"></i></a>
-    <a class = active> <i class="fas fa-user"></i></a>
+    <a class = active href="/user/myProfile"> <i class="fas fa-user"></i></a>
     <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
 </div>
 
@@ -30,13 +30,15 @@
     </span>
     <span class="allUsers">
         <a href="/user/view-matching-albums">Albums</a>
-        <a href="/user/view-matching-photos">Purchased Photos</a>
-        <a href = "/user/logout">Logout</a>
+        <a href="/user/get-purchased-photos">Purchased Photos</a>
+        <a href = "/logout">Logout</a>
     </span>
 </div>
 
 </body>
 <script src="/js/profile.js"></script>
 <script src = "/js/createStars.js"></script>
+<script src = "/js/notifications.js"></script>
+
 
 </html>
