--- a/Server/src/main/resources/templates/check-in.html
+++ b/Server/src/main/resources/templates/check-in.html
@@ -11,7 +11,7 @@
     <a href="/user/home"> <i class="fas fa-home"></i></a>
     <a href="search-location"><i class="fas fa-search-location"></i></a>
     <a class = "active"><i class="fas fa-map-marker-alt"></i></a>
-    <a href="home"> <i class="fas fa-user"></i></a>
+    <a href="myProfile"> <i class="fas fa-user"></i></a>
     <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
 </div>
 <br><br>
