--- a/Server/src/main/resources/templates/loadImageForm.html
+++ b/Server/src/main/resources/templates/loadImageForm.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <div class="icon-bar">
-    <a class = "active"> <i class="fas fa-home"></i></a>
+    <a class = "active" href="home"> <i class="fas fa-home"></i></a>
     <a href="search-location"><i class="fas fa-search-location"></i></a>
     <a href="check-in"><i class="fas fa-map-marker-alt"></i></a>
-    <a href="home.html"> <i class="fas fa-user"></i></a>
+    <a href="myProfile"> <i class="fas fa-user"></i></a>
     <a href="notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
 </div>
 <div class = "sub-bar">
