--- a/Server/src/main/resources/templates/payment.html
+++ b/Server/src/main/resources/templates/payment.html
@@ -6,12 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <head title="pay"></head>
-<body onload="injectLink()">
+<body>
 <div class="icon-bar">
     <a href="/user/home"> <i class="fas fa-home"></i></a>
     <a href="search-location"><i class="fas fa-search-location"></i></a>
-    <a class = "active"><i class="fas fa-map-marker-alt"></i></a>
-    <a href="home"> <i class="fas fa-user"></i></a>
+    <a  href="check-in"><i class="fas fa-map-marker-alt"></i></a>
+    <a class = "active" href="myProfile"> <i class="fas fa-user"></i></a>
     <a href="/user/notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id="badge"></span></a>
 </div>
     <div class="cardDetails" id="cardDetails">
@@ -31,6 +31,7 @@
     </div>
 
     <div class="server-msg" id="msg">
+        <span id = "msg1"></span>
         <a class="download" id="download">Download Image <i class="fas fa-cloud-download-alt"></i></a>
     </div>
 </div>
