--- a/Server/src/main/resources/templates/search-location.html
+++ b/Server/src/main/resources/templates/search-location.html
@@ -15,7 +15,7 @@
     <a href="home"> <i class="fas fa-home"></i></a>
     <a class = active><i class="fas fa-search-location"></i></a>
     <a  href = "check-in"><i class="fas fa-map-marker-alt"></i></a>
-    <a href="home.html"> <i class="fas fa-user"></i></a>
+    <a href="myProfile"> <i class="fas fa-user"></i></a>
     <a href="notifications" class="notification"><i class="fas fa-bell"></i><span class="badge" id = "badge"></span></a>
 </div>
 <div class="msg1"><h2>Please choose location on map, and then set time range</h2></div>
